增加图片功能

--- a/source/_posts/开始.md
+++ b/source/_posts/开始.md
@@ -1,7 +1,10 @@
 ---
 title: 开始
 date: 2016-04-24 02:17:57
-tags: 随笔
+tags: 
+  -随笔
+categorie: 
+  -随笔
 ---
 作为一个前端菜鸟，如今也入职快两个月了。  
 在这一个多月的工作中，感觉自己学到了不少东西。接触的代码都是实际生产环境的，对自己的代码能力提升很大。
