--- a/source/_posts/2016-04-24-hexo常用笔记备忘.md
+++ b/source/_posts/2016-04-24-hexo常用笔记备忘.md
@@ -1,10 +1,8 @@
 ---
 title: hexo常用笔记备忘
 date: 2016-04-24 03:10:15
-tags: 
-  -备忘
-categorie: 
-  -备忘
+tags: hexo
+categorie: 备忘
 ---
     hexo n 或 hexo new  "**"  新建文章
     hexo c 或 hexo clean  清除缓存
