--- a/source/_posts/2016-07-19-转义与XSS.md
+++ b/source/_posts/2016-07-19-转义与XSS.md
@@ -6,10 +6,10 @@ categories: 笔记
 ---
 > 最近公司的新版本开发，由于后端代码的更迭，前端出现了不少的xss漏洞，这里总结一下关于xss漏洞和前端转义的知识。  
 xss攻击，即跨站脚本攻击，是前端所遇到的最普遍的网络攻击，也是前端最常见并需要防护的攻击。  
-记得在今年年初，腾讯邮箱就出过一次xss漏洞，据说有开发者反馈到腾讯，才被发现解决，不过已经有黑客利用这个漏洞，到处发带有xss攻击的邮件，盗取了大量账号。可见，xss攻击防不胜防，即使是腾讯这样的大公司也可能出现疏漏。而且一旦漏洞被黑客利用，直接就能通过获取cookie等手段盗取用户账号，引起重大损失。  
+记得在今年年初，腾讯邮箱就出过一次xss漏洞，据说有开发者反馈到腾讯，才被发现解决，不过已经有黑客利用这个漏洞，到处发带有xss攻击的邮件，盗取了大量账号。可见，xss虽然简单，但攻击防不胜防，即使是腾讯这样的大公司也可能出现疏漏。而且一旦漏洞被黑客利用，直接就能通过获取cookie等手段盗取用户账号，引起重大损失。  
 
 ## 关于XSS   
-这里先介绍一下xss攻击的简单实现。通常前端总是免不了和数据打交道，经常要插入数据进dom中，这就给了攻击者可趁之机，因为浏览器并不知道你是想要单纯的插入dom，还是插入script脚本，一旦恶意脚本被注入，攻击者就能简单地获取到用户的信息。  
+这里先介绍一下xss攻击的简单实现。通常前端总是免不了和数据打交道，经常要插入数据进dom中，这就给了攻击者可趁之机，因为浏览器并不知道你是想要单纯的插入dom，还是插入脚本，一旦恶意脚本被注入，攻击者就能简单地获取到用户的信息。  
 ```js
 var div = document.getElementById('title');
 var title = 'xss攻击';
@@ -64,7 +64,10 @@ var encodeHTMLRules = {
 var matchHTML = /&(?!#?\w+;)|<|>|"|'|\//g;
 return str ? str.toString().replace(matchHTML, function (m) { return encodeHTMLRules[m] || m; }) : '';
 }
-```
+```  
+两种方法互有优缺点，前一种方法容易引发的会提是后端转义一次+前端也转义一次，引发二次转义，用户输入的`<>&`等字符会变成`&lt;&gt;&#39;`，而后一种方法引发问题的情况是后端没转义，用户输入`&lt;&gt;&#39;`等代码会变成`<>&`。
 ## 总结
-在实际生产环境中，后端在入口进行处理其实是最为妥当的，因为前端的数据出口随需求增长很快，很容易出现纰漏。  
-但是每个公司都会有自己的历史遗留，作为一个前端，你必须把所有的数据出口都进行保护，但你不能保证后端处理的正确一致。会出现有些数据encode了，而有些没有，甚至后端的历史问题，以前为了防止sql注入攻击，把所有引号都转义了，后来随着新工具的出现，又开始不转的情况，如果前端清一色的转义，很可能出现二次转义，而发生乱码问题。所以这里我比较推荐用正则替换htmlEncodeReg的方法来处理前端的数据。
+在实际生产环境中，如果不考虑某些数据库自己的问题，后端在数据输入口进行处理其实是最为妥当的，再不济也可以在每个接口进行转义，因为前端的数据出口随需求增长很快，很容易出现纰漏。  
+但是每个公司都会有自己的历史遗留，作为一个前端，你必须想办法把所有的数据出口都进行保护，但又不能保证后端处理的正确一致。会出现有些数据encode了，而有些没有，甚至后端以前为了防止sql注入攻击，仅仅把所有引号都转义了，后来随着新工具的出现，又开始不转的情况。  
+如果前端清一色的转义，很可能出现二次转义，而发生乱码问题。  
+经过讨论，我们结合自己实际情况，决定前端统一使用正则替换的方法encode，毕竟用户输入转义后的字符几率较小，不至于出现重大bug，而后端尽量把所有接口都进行一次encode，这样两方配合，能最大的减少出现XSS漏洞的情况。
